# Streamlit-UI

./: .env  .gitignore  README.md  app.py  download_nltk_data.py  main.py  pyproject.toml  requirements.txt
UI_Proj_basic/: requirements.txt
UI_Proj_basic/UI_STREAMLIT/: pyvenv.cfg
UI_Proj_complex_structure/: app.py
UI_Proj_complex_structure/UI_STREAMLIT/Scripts/: activate
UI_Proj_complex_structure/src/components/: __init__.py  header.py
UI_Proj_complex_structure/src/config/: __init__.py  config.py
UI_Proj_complex_structure/src/utils/: __init__.py
UI_STREAMLIT/Scripts/: activate.bat
src/: __init__.py
src/components/: chat_interface.py  header.py  safety_indicators.py  sidebar.py
src/config/: config.py  guardrails_config.py  theme_config.py
src/models/: response_models.py
src/utils/: gemini_utils.py  guardrails.py  response_parser.py  text_processing.py
