[project]
name = "ui-proj-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai==0.7.0",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "streamlit==1.42.2",
]
